--- a/public/consolepage.html
+++ b/public/consolepage.html
@@ -21,13 +21,13 @@
     <ul>
       <li>
         <a href="#">
-          <h2>To register or sign in,</h2>
+          <h2>To register or sign in</h2>
           <p>click the button below.</p>
         </a>
       </li> 
       <li>
         <a href="#">
-          <h2>Don't forget to watch your back!</h2>
+          <h2>Don't forget to watch your back...</h2>
         </a>
       </li>
       <li class="logo">
@@ -42,7 +42,7 @@
     </div>
 
     <div class="buttonrow">
-      <a href="/" class="btn btn-default"><span class="fa fa-user"></span> <img src="images/power.png"></a>
+      <a href="/" class="btn btn-default powerbutton"><span class="fa fa-user"></span> <img src="images/power.png"></a>
       <label>Sign Up/Sign In</label> 
     </div>
   </div>
