Added Winning Page from profile2

--- a/public/profile2.html
+++ b/public/profile2.html
@@ -67,17 +67,9 @@
 						<input id="tagGetter" type="text" class="form-control" name="tag" placeholder="Agent Tag #">
 					</div>
 					<div class="col-xs-3">
-						<button onclick="alertFunction()" class="btn btn-success">Submit Tag #</button>
+						<a class="btn btn-success" href="./profileWinning.html" role="button">Submit Tag #</a>
 					</div>
-					<script type="text/javascript">
-						function alertFunction () {
-							alert("Congratulations! You're the last agent standing! You win!");
-						}
-					</script>
-					<div class="col-xs-12">
-						<br>
-						<a href="/createGame" id="creategamebtn" class="btn btn-default"><span class="fa fa-user"></span>Create Game</a>
-					</div>
+					
 				</ul>	
 			</div>
 
