--- a/public/profile1.html
+++ b/public/profile1.html
@@ -26,7 +26,7 @@
             <li><a href="/profile">Profile</a></li>
             <li><a href="/signup">Sign Up</a></li>
             <li><a href="/consolepage.html">Go Home</a></li>
-            <li><a href="/createGame">Start A Game</a></li>
+            <li><a href="/createGame">Create A Game</a></li>
             <li role="separator" class="divider"></li>
             <li><a href="/logout">Logout</a></li>
           </ul>
