--- a/public/profile2.html
+++ b/public/profile2.html
@@ -26,7 +26,7 @@
             <li><a href="/profile">Profile</a></li>
             <li><a href="/signup">Sign Up</a></li>
             <li><a href="/consolepage.html">Go Home</a></li>
-            <li><a href="/createGame">Start A Game</a></li>
+            <li><a href="/createGame">Create A Game</a></li>
             <li role="separator" class="divider"></li>
             <li><a href="/logout">Logout</a></li>
           </ul>
@@ -64,7 +64,7 @@
 					  <h3 class="confirmTagText">Enter tag number to confirm elimination:</h3>                                                                               
 					</div>
 					<div class="col-xs-8">
-						<input id="tagGetter" type="text" class="form-control" name="tag" placeholder="Agent Tag #">
+						<input id="tagGetter" type="text" class="form-control" name="tag" placeholder="">
 					</div>
 					<div class="col-xs-3">
 						<a class="btn btn-success" href="./profileWinning.html" role="button">Submit Tag #</a>
