--- a/public/profileWinning.html
+++ b/public/profileWinning.html
@@ -26,7 +26,7 @@
             <li><a href="/profile">Profile</a></li>
             <li><a href="/signup">Sign Up</a></li>
             <li><a href="/consolepage.html">Go Home</a></li>
-            <li><a href="/createGame">Start A Game</a></li>
+            <li><a href="/createGame">Create A Game</a></li>
             <li role="separator" class="divider"></li>
             <li><a href="/logout">Logout</a></li>
           </ul>
@@ -39,9 +39,9 @@
 	<div class="container box" >
 		<div class="row"> 
 			<div>
-				<h1>Congratulations, You are</h1>
+				<h1>Congratulations! You are</h1>
 				<h1>the Last Agent Standing, </h1>
-				<h1>Penguinator</h1>
+				<h1>Penguinator!</h1>
 			</div>
 		</div>
 	</div>
